task-3/deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task3-deployment
  labels:
    app: task3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task3
  template:
    metadata:
      labels:
        app: task3
    spec:
      containers:
      - name: task3
        image: murilotico/task33:task33
        ports:
          - containerPort: 8000
