task-3/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: t3-service
spec:
  selector:
    app: t3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
