task-3/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task3-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: task3.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task3-service
                port:
                  number: 80
